--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h1>Learn HTML – Step by Step</h1>
 
       <img
-          src="images/index/htmlimg.webp"
+          src="images/index/html_img.png"
           alt="HTML5 logo showing the orange shield with white HTML text"
           width="120"
           height="100"
@@ -547,3 +547,4 @@
     </footer>
   </body>
 </html>
+
