--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,7 @@
       </nav>
 
       <h1>Contact Us</h1>
+      <img src="/images/website_image.png" alt="websites image">
     </header>
 
     <main id="main-content">
@@ -121,3 +122,4 @@
     </footer>
   </body>
 </html>
+
