--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
       </nav>
 
       <h1>Contact Us</h1>
-      <img src="/images/website_image.png" alt="websites image">
+      <img src="images/website_image.png" alt="websites image">
     </header>
 
     <main id="main-content">
@@ -122,4 +122,5 @@
     </footer>
   </body>
 </html>
+
 
