updated the website image

--- a/index.html
+++ b/index.html
@@ -505,12 +505,11 @@
 
       <section id="start">
         <h2>Start Your Journey</h2>
-
         <p>
           Begin with Chapter 1 to learn the basics. Each chapter builds on the
           previous one, guiding you step by step.
         </p>
-
+      <img src="images/website_image.png" alt="website image"  />
         <p><a href="getting-started.html">🚀 Get Started Now!</a></p>
         <p>
           <em
@@ -545,5 +544,6 @@
     </footer>
   </body>
 </html>
+
 
 
