Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -38,12 +38,7 @@
         </ol>
       </nav>
 
-      <h1>Learn HTML – Step by Step</h1>
-
-      <img
-          src="images/index/html_img.png"
-          alt="HTML5 logo showing the orange shield with white HTML text"
-        />
+      <img src="images/website_image.png" alt="website image"  />
     </header>
     <main id="main-content">
       <section id="toc">
@@ -67,6 +62,7 @@
         <details>
           <summary>Click to expand introduction</summary>
           <ul>
+            <img src="images/index/html_img.png" alt="HTML5 logo showing the orange shield with white HTML text"/>
             <li>HTML stands for Hyper Text Markup Language</li>
             <li>HTML is the standard markup language for creating Web pages</li>
             <li>HTML describes the structure of a Web page</li>
@@ -509,7 +505,6 @@
           Begin with Chapter 1 to learn the basics. Each chapter builds on the
           previous one, guiding you step by step.
         </p>
-      <img src="images/website_image.png" alt="website image"  />
         <p><a href="getting-started.html">🚀 Get Started Now!</a></p>
         <p>
           <em
@@ -544,6 +539,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
