Add HTML study planner section to homepage

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <li><a href="#page-structure">HTML Page Structure</a></li>
           <li><a href="#why-learn">Why Learn HTML?</a></li>
           <li><a href="#chapters">Main Topics</a></li>
+          <li><a href="#study-planner">HTML Study Planner</a></li>
           <li><a href="#faq">Frequently Asked Questions</a></li>
           <li><a href="#start">Start Your Journey</a></li>
         </ul>
@@ -392,6 +393,139 @@
             the results instantly. Perfect for practicing what you've learned in
             the tutorials!</em
           >
+        </p>
+      </section>
+
+      <section id="study-planner">
+        <h2>HTML Study Planner</h2>
+        <p>
+          Organize your daily practice sessions, track core focus areas, and
+          celebrate quick wins as you progress through each chapter.
+        </p>
+
+        <h3>Daily Planning Checklist</h3>
+        <form action="#" method="post">
+          <fieldset>
+            <legend>Plan Today's Study Session</legend>
+            <label for="planner-date">Study Date:</label>
+            <input type="date" id="planner-date" name="planner-date" />
+
+            <br /><br />
+            <label for="planner-chapter">Focus Chapter:</label>
+            <select id="planner-chapter" name="planner-chapter">
+              <option value="">Select chapter</option>
+              <option value="chapter1">Chapter 1 - Web Basics</option>
+              <option value="chapter2">Chapter 2 - HTML Fundamentals</option>
+              <option value="chapter3">Chapter 3 - Lists &amp; Tables</option>
+              <option value="chapter4">Chapter 4 - Structure &amp; Paths</option>
+              <option value="chapter5">Chapter 5 - Forms</option>
+              <option value="chapter6">Chapter 6 - Media</option>
+            </select>
+
+            <br /><br />
+            <fieldset>
+              <legend>Key Activities (check when complete)</legend>
+              <input type="checkbox" id="activity-read" name="activities" value="read" />
+              <label for="activity-read">Read chapter section</label><br />
+              <input type="checkbox" id="activity-notes" name="activities" value="notes" />
+              <label for="activity-notes">Summarize key points</label><br />
+              <input type="checkbox" id="activity-practice" name="activities" value="practice" />
+              <label for="activity-practice">Attempt practice questions</label><br />
+              <input type="checkbox" id="activity-review" name="activities" value="review" />
+              <label for="activity-review">Review glossary terms</label>
+            </fieldset>
+
+            <br />
+            <label for="planner-goal">Personal Goal for Today:</label><br />
+            <textarea
+              id="planner-goal"
+              name="planner-goal"
+              rows="3"
+              cols="60"
+              placeholder="Describe the outcome you want to achieve today"
+            ></textarea
+            ><br /><br />
+
+            <button type="submit">Record Study Plan</button>
+            <button type="reset">Clear Plan</button>
+          </fieldset>
+        </form>
+
+        <h3>Sample Weekly Schedule</h3>
+        <table>
+          <caption>
+            Suggested activities for five focused study days
+          </caption>
+          <thead>
+            <tr>
+              <th scope="col">Day</th>
+              <th scope="col">Recommended Activity</th>
+              <th scope="col">Estimated Time</th>
+              <th scope="col">Checkpoint</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Monday</td>
+              <td>Read a new chapter section and outline key terms</td>
+              <td>30 minutes</td>
+              <td>
+                <details>
+                  <summary>How to verify understanding</summary>
+                  <p>Explain the main idea aloud and list three new concepts.</p>
+                </details>
+              </td>
+            </tr>
+            <tr>
+              <td>Tuesday</td>
+              <td>Practice by recreating an example from memory</td>
+              <td>25 minutes</td>
+              <td>
+                <details>
+                  <summary>Checkpoint idea</summary>
+                  <p>Build a mini page with headings, paragraphs, and links.</p>
+                </details>
+              </td>
+            </tr>
+            <tr>
+              <td>Wednesday</td>
+              <td>Complete practice questions related to the chapter</td>
+              <td>20 minutes</td>
+              <td>
+                <details>
+                  <summary>Checkpoint idea</summary>
+                  <p>Score at least 80% on the relevant quiz section.</p>
+                </details>
+              </td>
+            </tr>
+            <tr>
+              <td>Thursday</td>
+              <td>Update personal glossary with new terms</td>
+              <td>15 minutes</td>
+              <td>
+                <details>
+                  <summary>Checkpoint idea</summary>
+                  <p>Write each term, its definition, and an HTML example.</p>
+                </details>
+              </td>
+            </tr>
+            <tr>
+              <td>Friday</td>
+              <td>Reflect on progress and plan next week's focus</td>
+              <td>20 minutes</td>
+              <td>
+                <details>
+                  <summary>Checkpoint idea</summary>
+                  <p>Document one challenge, one win, and the next goal.</p>
+                </details>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+
+        <p>
+          Tip: Print this schedule or copy it into your notes to keep yourself
+          accountable throughout the week.
         </p>
       </section>
 
